--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a Full Stack Developer in training</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Southern Calfornia</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Yoyoing and Longboarding</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>The one that works from home</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Rancho Cucamonga, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The world runs on the web now. I want to be a part of that.</p>
     </section>
 
     <footer id="footer">
